home section complete

--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Donate for Sylhet</title>
 </head>
 <body>
-    
+    <section id="home">
+        <div class="home-container">
+            <div class="overlay">
+                <div class="home-title">
+                    <h1>Come to help <span>Sylhet</span> and <span>Shunamganj</span></h1>
+                </div>
+                <div class="home-content">
+                    <p>Assalamualaikum, Dear good people, <br> We want to announce that one of our experienced team will go to <br> Sylhet and Shunamganj on next week.<br> We need huge funding for those helpless people.<br> We expect your help.</p>
+                </div>
+                <div class="home-button">
+                    <a href="#" target="_blank" class="button">Donate Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h1>Donate Today</h1>
+    </section>
 </body>
 </html>
