--- a/index.html
+++ b/index.html
@@ -27,7 +27,37 @@
         </div>
     </section>
     <section>
-        <h1>Donate Today</h1>
+        <div class="donate-title">
+            <h1>Donate Today</h1>
+        </div>
+        <div class="donate-subtitle">
+            <p>Your small fund will help those people <br> who are unable to manage their food. <br> So please help them as you can.</p>
+        </div>
+        <div class="amount">
+            <div class="amount-box">
+                <h2>100TK</h2>
+            </div>
+            <div class="amount-box-select">
+                <h2><span>200TK</span></h2>
+            </div>
+            <div class="amount-box">
+                <h2>500TK</h2>
+            </div>
+            <div class="amount-box">
+                <h2>1000TK</h2>
+            </div>
+            <div class="amount-box">
+                <h2>5000TK</h2>
+            </div>
+        </div>
+        <div class="other-amount">
+            <form action="">
+                <input type="text" placeholder="Other amount (Taka)" class="amount-form">
+            </form>
+        </div>
+        <div class="other-button">
+            <a href="#" target="_blank" class="button">Donate Now</a>
+        </div>
     </section>
 </body>
 </html>
