donate plan complete

--- a/index.html
+++ b/index.html
@@ -59,5 +59,48 @@
             <a href="#" target="_blank" class="button">Donate Now</a>
         </div>
     </section>
+    <section class="donate-plan">
+        <div class="plan-title">
+            <h1>Our Donate Plan</h1>
+        </div>
+        <div class="plan-subtitle">
+            <p>Check what's about our plan. <br> Check something we want to do.</p>
+        </div>
+        <div class="box-donate">
+            <div class="plan-box-1">
+                <div class="plan-icon">
+                    <img src="icons/food.png" alt="">
+                </div>
+                <div class="box-title">
+                    <h3>Food for Family and Children</h3>
+                </div>
+                <div class="box-content">
+                    <p>We want to give some food among those 10,000 family who are unable to manage their food. <br>we also give some baby food to those children who dont have quality food.</p>
+                </div>
+            </div>
+            <div class="plan-box-2">
+                <div class="plan-icon">
+                    <img src="icons/shelter.png" alt="">
+                </div>
+                <div class="box-title">
+                    <h3>Shelter for a family</h3>
+                </div>
+                <div class="box-content">
+                    <p>We want to make house for those people who are lost their house in this flood <br>we also give some house making instrument for repair their house.</p>
+                </div>
+            </div>
+            <div class="plan-box-3">
+                <div class="plan-icon">
+                    <img src="icons/Frame-1.png" alt="">
+                </div>
+                <div class="box-title">
+                    <h3>Education for Children</h3>
+                </div>
+                <div class="box-content">
+                    <p>We want to give some primary education book to those childer who lost their books in this flood <br>we also give some papers, pen, pencil, eraser etc educational equipment.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
