--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Donate for Sylhet</title>
 </head>
 <body>
+<!--Home Section Start-->
     <section id="home">
         <div class="home-container">
             <div class="overlay">
@@ -26,6 +27,10 @@
             </div>
         </div>
     </section>
+<!--Home Section End-->
+
+
+<!--Donate Section Start-->
     <section>
         <div class="donate-title">
             <h1>Donate Today</h1>
@@ -59,6 +64,9 @@
             <a href="#" target="_blank" class="button">Donate Now</a>
         </div>
     </section>
+<!--Donate Section End-->
+
+<!--Donate Plan Section Start-->
     <section class="donate-plan">
         <div class="plan-title">
             <h1>Our Donate Plan</h1>
@@ -102,5 +110,77 @@
             </div>
         </div>
     </section>
+<!--Donate Plan Section End-->
+
+<!--Mobile Banking Section Start-->
+    <section id="mobile-banking">
+        <div class="mobile-title">
+            <h1>Mobile Banking</h1>
+        </div>
+        <div class="mobile-subtitle">
+            <p>Send Your Funds <br> Using Mobile Banking System</p>
+        </div>
+        <div class="mobile-banking-box">
+            <div class="mobile-container-1">
+                <div class="banking-logo">
+                    <img src="icons/bkash.png" alt="" srcset="" class="banking-icon">
+                </div>
+                <div class="banking-name">
+                    <h1>BKash</h1>
+                </div>
+                <div class="banking-details">
+                    <p>01234-578910</p>
+                </div>
+            </div>
+            <div class="mobile-container-2">
+                <div class="banking-logo">
+                    <img src="icons/nagad.png" alt="" srcset="" class="banking-icon">
+                </div>
+                <div class="banking-name">
+                    <h1>Nagad</h1>
+                </div>
+                <div class="banking-details">
+                    <p>01234-578910</p>
+                </div>
+            </div>
+            <div class="mobile-container-3">
+                <div class="banking-logo">
+                    <img src="icons/rocket.png" alt="" srcset="" class="banking-icon">
+                </div>
+                <div class="banking-name">
+                    <h1>Rocket</h1>
+                </div>
+                <div class="banking-details">
+                    <p>01234-578910</p>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--Mobile Banking Section End-->
+
+<!--Update Section Start-->
+    <section id="update">
+        <div class="update-title">
+            <h1>Get Our Update</h1>
+        </div>
+        <div class="update-subtitle">
+            <p>Enter your email <br>For checking what we are doing with your fund.</p>
+        </div>
+        <div class="email-container">
+            <div class="update-box">
+                <form>
+                    <input type="email" placeholder="Email" class="update-emailarea">
+                </form>
+                <div class="update-email">
+                    <a href="#" target="_blank" class="button">Subscribe</a>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--Update Section End-->
+    <footer>
+        <h1>Helping Hand Foundation</h1>
+        <p>All Right Reserved By © Helping Hand Foundation - 2022</p>
+    </footer>
 </body>
 </html>
